# barista

./: .db.local.env  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
adapters/persistence/: Cargo.toml
adapters/persistence/src/: customer_entity.rs  customer_mapper.rs  customer_persistence_adapter.rs  customer_repository.rs  lib.rs  order_entity.rs  order_mapper.rs  order_persistence_adapter.rs  order_repository.rs  persistence_exception.rs
adapters/rest/: Cargo.toml
adapters/rest/src/: main.rs  order_coffee_request.rs
barista-application/: Cargo.toml
barista-application/src/application/: mod.rs
barista-application/src/application/port/incoming/: get_order_query.rs  mod.rs  order_coffee_use_case.rs
barista-application/src/application/port/outgoing/: find_order_port.rs  mod.rs  save_customer_port.rs  save_order_port.rs
barista-application/src/application/service/: mod.rs  order_coffee_service.rs
barista-application/src/domain/: coffee.rs  coffee_shop_exception.rs  customer.rs  mod.rs  order.rs
migrations/: 20210109233134_order.sql  20210110163006_coffeetype_order_table.sql  20210119201438_customer_table.sql  20210120191145_price_on_order_table.sql  20210123130635_customer_id_fk_orders_table.sql
