[package]
name = "barista-application"
version = "0.1.0"
authors = ["ozer <ozer.cevikaslan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
mockall = "0.9.0"
async-std = { version = "1.8.0", features = ["attributes"] }
