[package]
name = "persistence"
version = "0.1.0"
authors = ["ozer <ozer.cevikaslan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sqlx = { version = "0.4.1", features = ["macros", "postgres", "offline", "runtime-async-std-rustls"] }
async-trait = "0.1.42"
barista-application = { path = "../../barista-application" }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
